2007-02-06  Chong Yidong  <cyd@stupidchicken.com>

	* faces.el (face-set-after-frame-default): Compile attributes to
	be set by frame parameters before merging in X resources.

2007-02-06  Juanma Barranquero  <lekktu@gmail.com>

	* simple.el (blink-matching-paren-dont-ignore-comments):
	(blink-matching-paren-on-screen): Doc fixes.

2007-02-06  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-frames-mode): Truncate lines in stack buffer.

2007-02-05  Juanma Barranquero  <lekktu@gmail.com>

	* loadhist.el (unload-feature): Silently ignore `load-history' entries
	of the form `(defface . SYMBOL)', and treat `(autoload . SYMBOL)'
	entries like `defun'.  Return nil.

2007-02-05  Kim F. Storm  <storm@cua.dk>

	* ido.el: Doc fixes.

2007-02-04  David Kastrup  <dak@gnu.org>

	* play/mpuz.el (mpuz-random-puzzle): Fix potential lockup when
	`mpuz-allow-double-multiplicator' is non-zero, and correct
	calculation of `min'.

2007-02-04  Per Abrahamsen  <abraham@dina.kvl.dk>

	* wid-edit.el (widget-default-create): Insert new text at the
	:from marker _after_ the marker, not before it.

2007-02-04  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-cmds.el (c-indent-line): Don't erase ^L when a line
	containing it is re-indented.

2007-02-03  Chong Yidong  <cyd@stupidchicken.com>

	* net/newsticker.el (newsticker--insert-image): Update docstring,
	and insert the image directly.
	(newsticker--buffer-redraw): Update docstring.

	* emacs-lisp/easy-mmode.el (define-globalized-minor-mode):
	Rename from define-global-minor-mode.

	* progmodes/cwarn.el (global-cwarn-mode):
	* emacs-lisp/autoload.el (make-autoload):
	* hi-lock.el (global-hi-lock-mode):
	* font-core.el (global-font-lock-mode): All callers changed.

2007-02-03  Eli Zaretskii  <eliz@gnu.org>

	* textmodes/texnfo-upd.el (texinfo-menu-copy-old-description):
	Don't copy @ignore lines into menu descriptions.
	(texinfo-multi-file-update): Goto the @node line before attempting
	to pluck the node name.